@@ -1,3 +1,9 @@
+2014-06-19  Terry Guo  <terry.guo@arm.com>
+
+	* gcc.target/arm/thumb1-load-64bit-constant-1.c: New test.
+	* gcc.target/arm/thumb1-load-64bit-constant-2.c: Ditto.
+	* gcc.target/arm/thumb1-load-64bit-constant-3.c: Ditto.
+
 2014-06-19  Tobias Burnus  <burnus@net-b.de>
 
 	* gfortran.dg/coarray/collectives_2.f90: Extend
